--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -2,9 +2,11 @@
 
 \chapter{User Interface and Data Visualization Design}
 
-\section{Relevant History}
+\section{General History}
 
+The concerns of user interface designers has changed considerably since people first started interacting with programmable digital computers for processing, storing, and retrieving information. 
 
+The first interfaces depended on punch cards and paper tape as control mechanisms and line printers for output and program feedback. During the 1950s and 1960s, in order to input a program and a dataset into a computer, first one prepares a deck of punched cards using a typewriter-like machine, then one feeds the deck to the computer. Optionally on some machines, one can mount reels of magnetic tape that store oft-used or previously generated datasets or software. On these early machines, a particular job being run from a deck of punch cards would occupy the entire computer. A program 
 
 \section{Task Analysis}
 
@@ -33,6 +35,7 @@ connection
 
 Visual Information Seeking: Tight Coupling of Dynamic Query Filters with Starfield Displays
 \end{comment}
+\subsection{Recognition vs. Recall}
 \section{Modal Interfaces}
 
 \section{Filtering}
