--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-07 18:38:21 -0400 
+%% Created for Vijay at 2011-07-11 15:59:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,17 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{survey2008,
+	Author = {Jennifer Yick and Biswanath Mukherjee and Dipak Ghosal},
+	Date-Added = {2011-07-11 15:30:54 -0400},
+	Date-Modified = {2011-07-11 15:59:46 -0400},
+	Journal = {Computer Networks},
+	Month = {August},
+	Number = {12},
+	Title = {Wireless sensor network survey},
+	Volume = {52},
+	Year = {2008}}
 
 @book{assocarray2008,
 	Author = {Kurt Mehlhorn and Peter Sanders},
